Adding tabs to the home page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
         <title>Luc Gremillion</title>
     </head>
     <body>
+        <div class="tab">
+            <button class="tablinks" onclick="">Home</button>
+            <button class="tablinks" onclick="">Projects</button>
+            <button class="tablinks" onclick="">About Me</button>
+            <button class="tablinks" onclick="">Contact Me</button>
+        </div>
+    </body>
+    <body1>
         <h1>Luc Gremillion</h1>
         <h2>Software Engineer</h2>
         <h3></h3>
-    </body>
+    </body1>
 </html>
