Adding and changine elements

--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Luc Gremillion</title>
-    </head>
     <body>
-        <div class="tab">
-            <button class="tablinks" onclick="">Home</button>
-            <button class="tablinks" onclick="">Projects</button>
-            <button class="tablinks" onclick="">About Me</button>
-            <button class="tablinks" onclick="">Contact Me</button>
-        </div>
+        <head>
+            <title>Luc Gremillion</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+        <nav>
+            <ul class="tab">
+                <li class="">Home</li>
+                <li class="">Projects</li>
+                <li class="">About<a href="#About"></a></li>
+                <li class="">Contact</li>
+            </ul>
+        </nav>
+        <section>
+            <h1>Luc Gremillion</h1>
+            <h2>Software Engineer</h2>
+        </section>
+
+        <section class="About">
+            <h1>About Section</h1>
+        </section>
+
+        <section>
+            <h1>Project Section</h1>
+        </section>
+
+        <section>
+            <h1>Contact Section</h1>
+        </section>
+        
     </body>
-    <body1>
-        <h1>Luc Gremillion</h1>
-        <h2>Software Engineer</h2>
-        <h3></h3>
-    </body1>
+    
 </html>
