adding sections and linking navbar to sections

--- a/index.html
+++ b/index.html
@@ -6,30 +6,37 @@
             <link rel="stylesheet" href="style.css">
         </head>
         <nav>
-            <ul class="tab">
-                <li class="">Home</li>
-                <li class="">Projects</li>
-                <li class="">About<a href="#About"></a></li>
-                <li class="">Contact</li>
+            <ul class="nav">
+                <li id="nav-home">
+                    <a href="#Home">Home</a>
+                </li>
+                <li id="nav-project">
+                    <a href="#project">Projects</a>
+                </li>
+                <li id="nav-about">
+                    <a href="#about">About</a>
+                </li>
+                <li id="nav-about">
+                    <a href="#contact">Contact</a>
+                </li>
             </ul>
         </nav>
-        <section>
+
+        <section id="home" class="home">
             <h1>Luc Gremillion</h1>
             <h2>Software Engineer</h2>
         </section>
 
-        <section class="About">
+        <section id="about" class="about">
             <h1>About Section</h1>
         </section>
 
-        <section>
+        <section id="projects" class="projects">
             <h1>Project Section</h1>
         </section>
 
-        <section>
+        <section id="contact" class="contact">
             <h1>Contact Section</h1>
         </section>
-        
     </body>
-    
 </html>
