Adding style, via CSS

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Luc Gremillion</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
-        <head>
-            <title>Luc Gremillion</title>
-            <link rel="stylesheet" href="style.css">
-        </head>
-        <nav>
-            <ul class="nav">
+        <nav id="nav-bar">
+            <ul id="nav">
                 <li id="nav-home">
-                    <a href="#Home">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li id="nav-project">
-                    <a href="#project">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li id="nav-about">
                     <a href="#about">About</a>
