--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luc Gremillion</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav id="nav-bar">
-            <ul id="nav">
-                <li id="nav-home">
+            <ul>
+                <li>
                     <a href="#home">Home</a>
                 </li>
-                <li id="nav-project">
+                <li>
                     <a href="#projects">Projects</a>
                 </li>
-                <li id="nav-about">
+                <li>
                     <a href="#about">About</a>
                 </li>
-                <li id="nav-about">
+                <li>
                     <a href="#contact">Contact</a>
                 </li>
             </ul>
