--- a/index.html
+++ b/index.html
@@ -7,37 +7,27 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav id="nav-bar">
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#projects">Projects</a>
-                </li>
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="navbar">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+        </ul>
 
         <section id="home" class="home">
             <h1>Luc Gremillion</h1>
             <h2>Software Engineer</h2>
         </section>
 
-        <section id="about" class="about">
+        <section id="about" class="home">
             <h1>About Section</h1>
         </section>
 
-        <section id="projects" class="projects">
+        <section id="projects" class="home">
             <h1>Project Section</h1>
         </section>
 
-        <section id="contact" class="contact">
+        <section id="contact" class="home">
             <h1>Contact Section</h1>
         </section>
     </body>
