Navbar final for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -6,29 +6,48 @@
         <title>Luc Gremillion</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <ul class="navbar">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-        </ul>
-
+    <body>      
         <section id="home" class="home">
             <h1>Luc Gremillion</h1>
             <h2>Software Engineer</h2>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Hic fuga nulla distinctio praesentium id saepe quo totam 
+                alias dolorum amet, reiciendis sed temporibus unde, 
+                sunt tenetur repellendus deleniti est libero.</h3>
         </section>
+        <div class="navbar">
+            <ul class="navbar">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
 
-        <section id="about" class="home">
+
+
+        <section id="about" class="about">
             <h1>About Section</h1>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Hic fuga nulla distinctio praesentium id saepe quo totam 
+                alias dolorum amet, reiciendis sed temporibus unde, 
+                sunt tenetur repellendus deleniti est libero.</h3>
         </section>
 
         <section id="projects" class="home">
             <h1>Project Section</h1>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Hic fuga nulla distinctio praesentium id saepe quo totam 
+                alias dolorum amet, reiciendis sed temporibus unde, 
+                sunt tenetur repellendus deleniti est libero.</h3>
         </section>
 
         <section id="contact" class="home">
             <h1>Contact Section</h1>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Hic fuga nulla distinctio praesentium id saepe quo totam 
+                alias dolorum amet, reiciendis sed temporibus unde, 
+                sunt tenetur repellendus deleniti est libero.</h3>
         </section>
     </body>
 </html>
